hphp/test/slow/function/undefined-function-default.php.expectf

Fatal error: Call to undefined function g() in %s/undefined-function-default.php on line 3
